# libro

./: .gitignore  Dockerfile  Dockerfile_jenkins  Jenkinsfile  README.md  portforwards.sh  pyproject.toml  terraform.tfstate
app/: main.py
app/api/: api.py  deps.py
app/api/routes/: __init__.py  books.py  loans.py  members.py
app/core/: config.py  database.py
app/models/: __init__.py  book.py  common.py  loan.py  member.py
database/: init.sql
infrastructure/kubernetes/: jenkins.yaml  postgres.yaml  prometheus.yaml
infrastructure/terraform/: fastapi.tf  grafana.tf  jenkins.tf  outputs.tf  postgres.tf  prometheus.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
kubernetes/: app.yaml  jenkins.yaml  postgres-secret.yaml  postgres.yaml
tests/: README.md  conftest.py  test_api.py  test_books.py  test_fixture_demo.py  test_loans.py  test_members.py
