[project]
name = "libro"
version = "0.1.0"
description = "SZTE Felhő és Devops alkalmazásai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "psycopg>=3.2.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.0.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 200
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
